--- a/parceiros.html
+++ b/parceiros.html
@@ -5,33 +5,92 @@
 		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>parceiros</title>
+		<title>Quem Somos</title>
 		<meta name="description" content="" />
 		<meta name="author" content="Vanessa" />
+
 		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-	</head>
+
+</head>
 	<body>
-		<div>
-			<header>
-				<h1>parceiros</h1>
-			</header>
-			<nav>
+		<!--Inicio DIV BANNER (class banner)-->
+			<div> class="banner ">&nbsp;
+
+		<!--Fim DIV BANNER (class banner)-->
+			</div>
+
+		<!--Inicio DIV MENU (class menu)-->
+			<div class="menu">
+ 				 <ul>
+				    <li>
+				    	<a href="index.html">HOME</a>
+
+				    </li>
+
+				    <li>
+				    	<a href="quem_somos.html">QUEM SOMOS</a>
+				    </li>
+				    <li>
+				    	<a href="adocao_responsavel.html">ADOÇÃO RESPONSÁVEL</a>
+				    </li>
+
+				    <li>
+				    	<a href="adote.html">ADOTE</a>
+
+				    </li>
+				    <li>
+				    	<a href="noticias.html">NOTÍCIAS</a>
+				    </li>
+				    <li>
+
+				    	<a href="parceiros.html">PARCEIROS</a>
+				    </li>
+				    <li>
+
+				    	<a href="seja_um_voluntario.html">SEJA UM VOLUNTÁRIO</a>
+				    </li>
+				    <li>
+				    	<a href="contato.html">CONTATO</a>
+
+				    </li>
+				    <li>
+				    	<a href="login.html">LOGIN</a>
+
+				    </li>
+  				</ul>
+		<!--Fim DIV MENU (class menu)-->	
+			</div>
+		<!--Inicio DIV BODY (class corpo)-->
+
+			<div class="corpo">
 				<p>
-					<a href="/">Home</a>
+					<span class ="dropcao">O</span> BDWEB Animals foi criado no ano de 2011, elaborado por em um grupo de alunos em trabalho acadêmico. Nosso objetivo é divulgar a importância de adoção de animais.
+					Um espaço onde será divulgado animais para adoção, informações sobre o processo de adoção e noticiar novas leis e projetos em andamento. 
 				</p>
-				<p>
-					<a href="/contact">Contact</a>
+
+				
+			<h1>Missão</h1>
+				<p>Quando decidimos adquirir um animal doméstico, devemos primeiramente assumir na responsabilidade de cuidar desse animal.
+				Um animal precisa de carinho, atenção e de bons cuidados. Não podemos simplesmente nos descartar, como se fossem uma roupa que não gostamos mais.
+				Por isso, o BDWEB Animals tem a missão de conscientizar a sociedade sobre a adoção responsável.
 				</p>
-			</nav>
-			<div></div>
-			<footer>
-				<p>
-					&copy; Copyright  by Vanessa
-				</p>
-			</footer>
-		</div>
+			</div>
+
+		
+		<!--FIM DIV BODY (class corpo)-->	
+
+		<!--Inicio DIV RODAPÉ (class rodape)-->
+			<div class="rodape">
+  				<footer>
+    				<p>&copy; Copyright BDWEB Animals&nbsp;&nbsp;&nbsp;&nbsp;</p>
+
+  				</footer>
+  			<!--Fim DIV RODAPÉ (class rodape)-->	
+			</div>
+
 	</body>
 </html>
+
