--- a/parceiros.html
+++ b/parceiros.html
@@ -5,7 +5,7 @@
 		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>Quem Somos</title>
+		<title>Parceiros</title>
 		<meta name="description" content="" />
 		<meta name="author" content="Vanessa" />
 
@@ -13,9 +13,8 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
-</head>
-	<body>
+	</head>
+		<body>
 		<!--Inicio DIV BANNER (class banner)-->
 			<div> class="banner ">&nbsp;
 
@@ -25,72 +24,59 @@
 		<!--Inicio DIV MENU (class menu)-->
 			<div class="menu">
  				 <ul>
-				    <li>
-				    	<a href="index.html">HOME</a>
+				    <li><a href="index.html">HOME</a></li>
+				    <li><a href="quem_somos.html">QUEM SOMOS</a></li>
 
-				    </li>
+				    <li><a href="adocao_responsavel.html">ADOÇÃO RESPONSÁVEL</a></li>
+				    <li><a href="adote.html">ADOTE</a></li>
+				    <li><a href="noticias.html">NOTÍCIAS</a></li>
+				    <li><a href="parceiros.html">PARCEIROS</a></li>
+				    <li><a href="seja_um_voluntario.html">SEJA UM VOLUNTÁRIO</a></li>
+				    <li><a href="contato.html">CONTATO</a></li>
 
-				    <li>
-				    	<a href="quem_somos.html">QUEM SOMOS</a>
-				    </li>
-				    <li>
-				    	<a href="adocao_responsavel.html">ADOÇÃO RESPONSÁVEL</a>
-				    </li>
-
-				    <li>
-				    	<a href="adote.html">ADOTE</a>
-
-				    </li>
-				    <li>
-				    	<a href="noticias.html">NOTÍCIAS</a>
-				    </li>
-				    <li>
-
-				    	<a href="parceiros.html">PARCEIROS</a>
-				    </li>
-				    <li>
-
-				    	<a href="seja_um_voluntario.html">SEJA UM VOLUNTÁRIO</a>
-				    </li>
-				    <li>
-				    	<a href="contato.html">CONTATO</a>
-
-				    </li>
-				    <li>
-				    	<a href="login.html">LOGIN</a>
-
-				    </li>
+				    <li><a href="login.html">LOGIN</a></li>
   				</ul>
 		<!--Fim DIV MENU (class menu)-->	
 			</div>
 		<!--Inicio DIV BODY (class corpo)-->
-
 			<div class="corpo">
-				<p>
-					<span class ="dropcao">O</span> BDWEB Animals foi criado no ano de 2011, elaborado por em um grupo de alunos em trabalho acadêmico. Nosso objetivo é divulgar a importância de adoção de animais.
-					Um espaço onde será divulgado animais para adoção, informações sobre o processo de adoção e noticiar novas leis e projetos em andamento. 
-				</p>
+			<p>BDWEB Animals apoia os projetos e as ONG's:</p>
+				<ul>
 
-				
-			<h1>Missão</h1>
-				<p>Quando decidimos adquirir um animal doméstico, devemos primeiramente assumir na responsabilidade de cuidar desse animal.
-				Um animal precisa de carinho, atenção e de bons cuidados. Não podemos simplesmente nos descartar, como se fossem uma roupa que não gostamos mais.
-				Por isso, o BDWEB Animals tem a missão de conscientizar a sociedade sobre a adoção responsável.
-				</p>
+					<li>
+						<img src="Imagens/pedigree.jpg" alt="Pedigree Adotar é tudo de bom"/></br>
+						<a href="http://www.adotaretudodebom.com.br/" target="_blank">Leia mais...</br></a>
+					</li>
+					
+					<li>
+						<img src="Imagens/caoviver.jpg" alt="Cão Viver"/></br>
+						<p>A Cãopartilhe é uma Organização Não Governamental, sem fins lucrativos, formalmente constituída, que realiza, desde 2007, 
+							um trabalho voluntário dedicado a melhorar a situação dos animais de rua e diminuir/erradicar a ocorrência de maus tratos e 
+							abandono, trabalho realizado paralelamente à difusão da conscientização da população, por meio de campanhas e eventos que enfatizam e ilustram temas de importância da proteção, 
+							como não abandono, maus tratos, castração, prevenção a leishmaniose, guarda responsável, entre outros. </p>
+
+						<a href="http://www.caopartilhe.com/" target="_blank">Leia mais...</a></br>
+
+					</li>
+					<li>
+						<img src="Imagens/caopartilhe.jpg" alt="Cãopartilhe"/></br>
+						<p>A “Cão Viver” foi constituída oficialmente no final do mês de agosto de 2003, por um grupo de quatro amigos, que antes desenvolviam ações isoladas. 
+							Com o objetivo de acolher e abrigar cães e gatos em situação de abandono, a ONG foi criada e passou a agregar ações em defesa, proteção animal e Educação Ambiental. </p>
+						<a href="http://caoviver.com.br/" target="_blank">Leia mais...</a>
+					</li>
+
+				</ul>
+		<!--FIM DIV BODY (class corpo)-->			
 			</div>
-
-		
-		<!--FIM DIV BODY (class corpo)-->	
 
 		<!--Inicio DIV RODAPÉ (class rodape)-->
 			<div class="rodape">
   				<footer>
     				<p>&copy; Copyright BDWEB Animals&nbsp;&nbsp;&nbsp;&nbsp;</p>
-
   				</footer>
-  			<!--Fim DIV RODAPÉ (class rodape)-->	
+
+  		<!--Fim DIV RODAPÉ (class rodape)-->	
 			</div>
-
 	</body>
-</html>
 
+</html>
