Atualiza diretorio imagem

--- a/parceiros.html
+++ b/parceiros.html
@@ -44,12 +44,12 @@
 				<ul>
 
 					<li>
-						<img src="Imagens/pedigree.jpg" alt="Pedigree Adotar é tudo de bom"/></br>
+						<img src="pedigree.jpg" alt="Pedigree Adotar é tudo de bom"/></br>
 						<a href="http://www.adotaretudodebom.com.br/" target="_blank">Leia mais...</br></a>
 					</li>
 					
 					<li>
-						<img src="Imagens/caoviver.jpg" alt="Cão Viver"/></br>
+						<img src="caoviver.jpg" alt="Cão Viver"/></br>
 						<p>A Cãopartilhe é uma Organização Não Governamental, sem fins lucrativos, formalmente constituída, que realiza, desde 2007, 
 							um trabalho voluntário dedicado a melhorar a situação dos animais de rua e diminuir/erradicar a ocorrência de maus tratos e 
 							abandono, trabalho realizado paralelamente à difusão da conscientização da população, por meio de campanhas e eventos que enfatizam e ilustram temas de importância da proteção, 
@@ -59,7 +59,7 @@
 
 					</li>
 					<li>
-						<img src="Imagens/caopartilhe.jpg" alt="Cãopartilhe"/></br>
+						<img src="caopartilhe.jpg" alt="Cãopartilhe"/></br>
 						<p>A “Cão Viver” foi constituída oficialmente no final do mês de agosto de 2003, por um grupo de quatro amigos, que antes desenvolviam ações isoladas. 
 							Com o objetivo de acolher e abrigar cães e gatos em situação de abandono, a ONG foi criada e passou a agregar ações em defesa, proteção animal e Educação Ambiental. </p>
 						<a href="http://caoviver.com.br/" target="_blank">Leia mais...</a>
