atualização da estrutura da pagina home

--- a/index.html
+++ b/index.html
@@ -14,24 +14,31 @@
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 	</head>
 	<body>
+	<!--Inicio div principal-->
 		<div>
-			<header>
-				<h1>index</h1>
-			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-			<div></div>
-			<footer>
-				<p>
-					&copy; Copyright  by Vanessa
-				</p>
-			</footer>
+	
+			<!--Inicio DIV BANNER-->
+			<div class="banner">&nbsp;
+			</div>
+			<!--Fim DIV BANNER--->
+		
+		
+		
+		
+		
+			<!--Inicio DIV MENU-->
+			<div class="menu">
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">ADOÇÃO</a></li>
+					<li><a href="#">VOLUNTÁRIOS</a></li>
+					<li><a href="#">NOTÍCIAS</a></li>
+					<li><a href="#">ONG'S</a></li>
+					<li><a href="#">CONTATO</a></li>
+				</ul>
+			</div>
+			<!--Fim DIV MENU-->
 		</div>
+		<!--Fim div principal-->
 	</body>
 </html>
