Contexto Adoção Responvável

--- a/adocao_responsavel.html
+++ b/adocao_responsavel.html
@@ -5,33 +5,88 @@
 		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>adocao_responsavel</title>
+		<title>Parceiros</title>
 		<meta name="description" content="" />
 		<meta name="author" content="Vanessa" />
+
 		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 	</head>
-	<body>
-		<div>
-			<header>
-				<h1>adocao_responsavel</h1>
-			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
+		<body>
+		<!--Inicio DIV BANNER (class banner)-->
+			<div> class="banner ">&nbsp;
+
+		<!--Fim DIV BANNER (class banner)-->
+			</div>
+
+		<!--Inicio DIV MENU (class menu)-->
+			<div class="menu">
+ 				 <ul>
+				    <li><a href="index.html">HOME</a></li>
+				    <li><a href="quem_somos.html">QUEM SOMOS</a></li>
+
+				    <li><a href="adocao_responsavel.html">ADOÇÃO RESPONSÁVEL</a></li>
+				    <li><a href="adote.html">ADOTE</a></li>
+				    <li><a href="noticias.html">NOTÍCIAS</a></li>
+				    <li><a href="parceiros.html">PARCEIROS</a></li>
+				    <li><a href="seja_um_voluntario.html">SEJA UM VOLUNTÁRIO</a></li>
+				    <li><a href="contato.html">CONTATO</a></li>
+
+				    <li><a href="login.html">LOGIN</a></li>
+  				</ul>
+		<!--Fim DIV MENU (class menu)-->	
+			</div>
+		<!--Inicio DIV BODY (class corpo)-->
+			<div class="corpo">
+			<ul>
+			<li>Passeios
+				<p>No caso dos cães, passeios são sempre bem vindos quando acompanhados de seu guardião e usando coleira e guia, além da placa de identificação.
+				Os animais agressivos devem utilizar focinheira durante o passeio.
+				IMPORTANTE! Crianças desacompanhadas não devem sair com animais.
 				</p>
-				<p>
-					<a href="/contact">Contact</a>
+			</li>
+			
+			<li>Cidadania
+				<p>Recolher os dejetos das vias públicas é educado e responsável, portanto, leve sempre um saquinho plástico no passeio com seu animal.
+			       SAÚDE, HIGIENE E CUIDADOS
+			    </p>
+			</li>
+			
+			<li>Vermifugação
+				<p>Os animais já nascem com vários tipos de parasitas internos. Os filhotes precisam ser medicados com a primeira dose de vermífugo aos 30 dias, com repetição após 15 dias e, após, periodicamente, de 6 em 6 meses.
+				Os animais já nascem com vários tipos de parasitas internos. Os filhotes precisam ser medicados com a primeira dose de vermífugo aos 30 dias, com repetição após 15 dias e, após, periodicamente, de 6 em 6 meses.
 				</p>
-			</nav>
-			<div></div>
-			<footer>
-				<p>
-					&copy; Copyright  by Vanessa
+			</li>
+			<li> Vacinação para cães
+				<p>Aos 45 dias: Primeira dose da vacina óctupla, que protege contra doenças próprias da espécie.
+					30 dias após: Segunda dose da vacina óctupla
+					30 dias após: Terceira e última dose da vacina óctupla e vacinação anti-rábica.
+					Aos 4, meses vacinação contra a Leishmaniose.
 				</p>
-			</footer>
-		</div>
+			</li>
+			<li>Vacinação para gatos
+				<p>
+					Aos 45 dias: Primeira dose da vacina tríplice felina, que protege contra doenças próprias da espécie.
+					30 dias: Segunda e última dose da vacina tríplice felina.
+					As vacinas devem ser repetidas anualmente.
+I					MPORTANTE: Além da vacina contra a Leishmaniose, é recomendável o uso de coleira repelente e/ou inseticidas repelentes que ajudam a afastar o mosquito transmissor da doença.
+					LEMBRE-SE: Tratar uma doença custa mais caro que preveni-la!
+				</p>
+			</li>
+			</ul>
+		<!--FIM DIV BODY (class corpo)-->			
+			</div>
+
+		<!--Inicio DIV RODAPÉ (class rodape)-->
+			<div class="rodape">
+  				<footer>
+    				<p>&copy; Copyright BDWEB Animals&nbsp;&nbsp;&nbsp;&nbsp;</p>
+  				</footer>
+
+  		<!--Fim DIV RODAPÉ (class rodape)-->	
+			</div>
 	</body>
+
 </html>
