--- a/adocao_responsavel.html
+++ b/adocao_responsavel.html
@@ -5,7 +5,7 @@
 		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>Parceiros</title>
+		<title>Adoçao Responsável</title>
 		<meta name="description" content="" />
 		<meta name="author" content="Vanessa" />
 
