atualização do contexto

--- a/adocao_responsavel.html
+++ b/adocao_responsavel.html
@@ -75,6 +75,22 @@ I					MPORTANTE: Além da vacina contra a Leishmaniose, é recomendável o uso d
 					LEMBRE-SE: Tratar uma doença custa mais caro que preveni-la!
 				</p>
 			</li>
+						<li>Queda de pêlos
+				<p>Ração de boa qualidade, além de vitaminas, auxilia na diminuição da queda de pêlos.
+					A troca de pelo é normal e acontece algumas vezes por ano.					
+				</p>
+			</li>
+			<li>Consultas ao Veterinário
+				<p>O ideal é levar seu amigo ao veterinário pelo menos uma vez ao ano e, impreterivelmente quando ele adoecer.
+					O veterinário é o profissional específico para cuidar dos animais, que são sensíveis em relação a alguns medicamentos humanos.
+				</p>
+			</li>
+			<li>Banhos
+				<p>Recomenda-se que seja feito em dias quentes, nas horas mais quentes do dia, com uso de água morna, sabonete e shampoo específicos.
+					Os ouvidos devem estar protegidos com algodão para evitar entrada de água.
+					Filhotes podem ser limpos com pano embebido em água, vinagre branco e álcool em proporções iguais, mas um banho é sempre bem-vindo, com os devidos cuidados.
+				</p>
+			</li>
 			</ul>
 		<!--FIM DIV BODY (class corpo)-->			
 			</div>
